...
    <dependencies>
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14306.4"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
            <connections>
                <outlet property="delegate" destination="Voe-Tx-rLC" id="GzC-gU-4Uq"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
...
                <outlet property="mainMenuController" destination="a1q-4L-Wmq" id="YTn-et-G3m"/>
                <outlet property="toolbarController" destination="cZX-Hr-rWv" id="y5G-UV-0Ib"/>
            </connections>
        </customObject>
        <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
            <items>
                <menuItem title="Burmese Test V3" id="1Xt-HY-uBw">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Burmese Test V3" systemMenu="apple" id="uQy-DD-JDr">
                        <items>
                            <menuItem title="About Burmese Test V3" id="5kV-Vb-QxS">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
...
                        <items>
                            <menuItem title="New" keyEquivalent="n" id="Was-JA-tGl">
                                <connections>
                                    <action selector="newDocument:" target="-1" id="4Si-XN-c54"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Open…" keyEquivalent="o" id="IAo-SY-fd9">
                                <connections>
                                    <action selector="openDocument:" target="-1" id="fjr-fL-5JE"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Open Recent" id="Awc-Ju-d5D">
                                <modifierMask key="keyEquivalentModifierMask"/>
...
                            <menuItem title="Delete" id="pa3-QI-u2k">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="delete:" target="-1" id="0Mk-Ml-PaM"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Select All" keyEquivalent="a" id="Ruw-6m-B2m">
                                <connections>
                                    <action selector="selectAll:" target="-1" id="VNm-Mi-diN"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="uyl-h8-XO2"/>
                            <menuItem title="Find" id="4EN-yA-p0u">
...
                        </items>
                        <connections>
                            <outlet property="delegate" destination="EEq-js-4AC" id="jeE-33-UQ2"/>
                        </connections>
                    </menu>
                </menuItem>
                <menuItem title="Word Type" id="lv5-ls-i4E" userLabel="Word Types">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Word Type" id="db1-O8-0hf">
                        <items>
                            <menuItem isSeparatorItem="YES" tag="1" id="CvZ-nF-FgV"/>
                            <menuItem title="Select None" tag="3" id="v7J-Qr-FC4">
                                <modifierMask key="keyEquivalentModifierMask"/>
...
                            <tabViewItem label="Results" identifier="" id="unX-f8-0zp">
                                <view key="view" id="Nyh-rt-wya">
                                    <rect key="frame" x="10" y="7" width="794" height="467"/>
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                </view>
                            </tabViewItem>
                            <tabViewItem label="Words" identifier="" id="hTL-L5-Bzs">
                                <view key="view" id="FTD-f1-EtN">
                                    <rect key="frame" x="10" y="7" width="794" height="467"/>
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                </view>
                            </tabViewItem>
                            <tabViewItem label="Export" identifier="" id="Nrg-Ox-UBP">
...
