...

import XCTest
@testable import Burmese_Test_V3

class testPJFileManager: XCTestCase {

    let fileUrl = URL(string: "file:///users/peejpowell/BMTFiles/general.plist")!
    let invalidFileUrl = URL(string: "file:///users/peejpowell/BMTFiles/.DS_Store")!
    let nonExistentUrl = URL(string: "file:///users/peejpowell/BMTFiles/doesntexist")!
    let folderUrl = URL(string: "file:///users/peejpowell/BMTFiles")!
    
    let fileManager = BMTFileManager(controller: getMainWindowController().mainTabViewController.wordsViewController)
    var newDataSource = TableViewDataSource()
...
